home and destination completed

--- a/assets/css/destination.css
+++ b/assets/css/destination.css
@@ -151,3 +151,41 @@
 
     font-size: 1.5vw;
 }
+
+
+@media (width < 850px){
+
+    .container-disti{
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        margin-top: 6%;
+        
+    }
+
+
+    .h3-pic{
+        font-size: 5vw;
+    }
+    
+    .h3-pic b{
+    
+        font-size: 6vw;
+    }
+    
+    .destination-img{
+    
+        width: 35vw;
+    }
+
+
+    .desti-ul{
+        margin-top: 10%;
+        gap: 4vw;
+        /* height: 200px; */
+    }
+
+
+}
