--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@
 } */
 
 .container-main-home{
-    height: 100%;
+    height: 150%;
     background-image: url("../imgs/earth-space.png"),  url("../imgs/back-black.jpg");
     background-size:contain, cover;
     background-position:right, center;
@@ -117,6 +117,9 @@
 .menu-toggle{
 
     display: none;
+    /* width: 100px;
+    height: 100px;
+    background-color: red; */
 }
 
 .container{
@@ -193,30 +196,154 @@
 
 
 
+@media (width < 1120px){
 
 
-
-
-@media (width < 800px){
-
-    body{
-
-        background-image: url("../imgs/earth-space.png"), url("../imgs/back-stars.jpg");
+    .container-main-home{
+        height: 100%;
+        background-image: url("../imgs/earth-top-right.png"),  url("../imgs/back-black.jpg");
         background-size:contain, cover;
-        background-position:right, center;
+        background-position:top right, center;
         background-repeat: no-repeat;
-        /* background-size:cover, cover; */
-        
-    } 
+        padding-top: 50px;
+    
+    }
 
     .nav-bar ul{
 
-        padding: 0 5%;
+        padding: 0 1%;
     }
 
     .line{
 
-        margin-right: -5%;
+        margin-right: -1%;
+    }
+
+
+    .h3-so{
+
+        font-size: 3.2vw;
+        font-family: "Teko";
+        font-weight: 100;
+        letter-spacing: .3vw;
+        word-spacing: 1vw;
+        text-transform: uppercase;
+    
+    }
+    
+    .h1-space{
+    
+        font-size: 15vw;
+    
+    }
+    
+    .p-lets{
+    
+        font-size: 2.2vw;
+        color: #ffffff;
+        text-shadow: 2px 2px 2px #000000;
+        font-family: "Teko";
+        letter-spacing: .1vw;
+        word-spacing: .1vw;
+    
+    }
+
+    .round{
+    
+        bottom: 5%;
+        right: 5%;
+
+        width: 200px;
+        height: 200px;
+        font-size: 50px;
+        letter-spacing: 2px;
+        position: absolute;
+    }
+
+}
+
+
+
+@media (width < 720px){
+
+    .container-main-home{
+        height: 100%;
+        background-image: url("../imgs/back-black.jpg");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        padding-top: 50px;
+    
+    }
+
+    .nav-bar ul{
+
+        width: 70%;
+        height: 70px;
+        display: flex;
+        justify-content: right;
+        align-items: center;
+        list-style-type: none;
+        background-color: #87878751;
+        backdrop-filter: blur(10px);
+    }
+
+    .nav-bar ul .dsp{
+
+        display: none;
+        
+    }
+
+    .menu-toggle{
+        display: block;
+        width: 40px;
+    }
+
+
+    .line{
+
+        margin-right: -10%;
+    }
+
+
+    .h3-so{
+
+        font-size: 5vw;
+        font-family: "Teko";
+        font-weight: 100;
+        letter-spacing: .3vw;
+        word-spacing: 1vw;
+        text-transform: uppercase;
+    
+    }
+    
+    .h1-space{
+    
+        font-size: 25vw;
+    
+    }
+    
+    .p-lets{
+    
+        font-size: 4vw;
+        color: #ffffff;
+        text-shadow: 2px 2px 2px #000000;
+        font-family: "Teko";
+        letter-spacing: .1vw;
+        word-spacing: .1vw;
+    
+    }
+
+    .round{
+    
+        bottom: 2%;
+        right: 2%;
+
+        width: 100px;
+        height: 100px;
+        font-size: 30px;
+        letter-spacing: 2px;
+        position: absolute;
     }
 
 }
